k8s-configurations/memcached.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  namespace: seafile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
        - name: memcached
          image: memcached:1.6.18
          args: ["-m", "256"]
          ports:
            - containerPort: 11211
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
              ephemeral-storage: "500Mi"
            limits:
              memory: "512Mi"
              cpu: "500m"
              ephemeral-storage: "1Gi"
