k8s-configurations/seafile-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile
  namespace: seafile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile
  template:
    metadata:
      labels:
        app: seafile
    spec:
      containers:
        - name: seafile
          image: seafileltd/seafile-mc:11.0-latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
      #     volumeMounts:
      #       - name: seafile-data
      #         mountPath: /shared
      #       - name: seafile-config
      #         mountPath: /shared/seafile/conf/seafile.conf
      #         subPath: seafile.conf
      # volumes:
      #   - name: seafile-data
      #     persistentVolumeClaim:
      #       claimName: seafile-data
      #   - name: seafile-config
      #     configMap:
      #       name: seafile-config
      restartPolicy: Always
      # to get image from protected repository
      imagePullSecrets:
        - name: regcred
