k8s-configurations/mariadb-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-headless
  namespace: seafile
spec:
  clusterIP: None
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
