k8s-configurations/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: seafile
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---

apiVersion: v1
kind: Service
metadata:
  name: memcached
  namespace: seafile
spec:
  selector:
    app: memcached
  ports:
    - protocol: TCP
      port: 11211
      targetPort: 11211
---

apiVersion: v1
kind: Service
metadata:
  name: seafile
  namespace: seafile
spec:
  selector:
    app: seafile
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 30000
---
